src/avrora/core/isdl/parser/ISDLParser.java
/* Generated By:JavaCC: Do not edit this line. ISDLParser.java */
package avrora.core.isdl.parser;
import avrora.core.isdl.ast.*;
import avrora.core.isdl.*;
import java.util.List;
import java.util.LinkedList;

public class ISDLParser implements ISDLParserConstants {

/* Begin GRAMMAR */
  final public Architecture Architecture() throws ParseException {
                                Token n; Architecture a;
    jj_consume_token(ARCHITECTURE);
    n = jj_consume_token(IDENTIFIER);
                                      a = new Architecture(n);
    jj_consume_token(LBRACKET);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INSTRUCTION:
      case FORMAT:
      case OPERAND:
      case REGISTER:
      case SUBROUTINE:
      case INLINE:
      case EXTERNAL:
      case PSEUDO:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      Item(a);
    }
    jj_consume_token(RBRACKET);
          a.process(); {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  final public void Item(Architecture a) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INSTRUCTION:
    case PSEUDO:
      Instruction(a);
      break;
    case FORMAT:
      FormatDecl(a);
      break;
    case OPERAND:
      OperandDecl(a);
      break;
    case REGISTER:
      RegisterDecl(a);
      break;
    case SUBROUTINE:
    case INLINE:
    case EXTERNAL:
      Subroutine(a);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Instruction(Architecture a) throws ParseException {
    Token n;
    InstrDecl i;
    List o = new LinkedList(),
         s = new LinkedList();
    EncodingDecl e = null;
    Token c = null;
    boolean pseudo = false;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PSEUDO:
      jj_consume_token(PSEUDO);
                pseudo = true;
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    jj_consume_token(INSTRUCTION);
    n = jj_consume_token(STRING_LITERAL);
    o = Formals();
    jj_consume_token(LBRACKET);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ENCODING:
      e = Encoding(n);
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CYCLES:
      c = Cycles();
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EXECUTE:
      s = Execute(s);
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(RBRACKET);
    jj_consume_token(SEMI);
              a.addInstruction(new InstrDecl(pseudo, n, null, o, c, s, e));
  }

  final public Token Cycles() throws ParseException {
                   Token c;
    jj_consume_token(CYCLES);
    jj_consume_token(EQUALS);
    c = jj_consume_token(INTEGER_LITERAL);
    jj_consume_token(SEMI);
                                             {if (true) return c;}
    throw new Error("Missing return statement in function");
  }

  final public EncodingDecl Encoding(Token n) throws ParseException {
                                   EncodingDecl d;
    jj_consume_token(ENCODING);
    jj_consume_token(EQUALS);
    d = Format(n);
    jj_consume_token(SEMI);
                                       {if (true) return d;}
    throw new Error("Missing return statement in function");
  }

  final public List Execute(List s) throws ParseException {
    jj_consume_token(EXECUTE);
    jj_consume_token(EQUALS);
    Block(s);
    jj_consume_token(SEMI);
                                 {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  final public void FormatDecl(Architecture a) throws ParseException {
                                    Token n; EncodingDecl d;
    jj_consume_token(FORMAT);
    n = jj_consume_token(IDENTIFIER);
    jj_consume_token(EQUALS);
    d = Format(n);
    jj_consume_token(SEMI);
                                                      a.addEncoding(d);
  }

  final public void OperandDecl(Architecture a) throws ParseException {
                                     Token n, k, b;
    jj_consume_token(OPERAND);
    n = jj_consume_token(IDENTIFIER);
    jj_consume_token(71);
    b = jj_consume_token(INTEGER_LITERAL);
    jj_consume_token(72);
    jj_consume_token(73);
    k = Kind();
    jj_consume_token(EQUALS);
    OperandTail(a, n, b, k);
    jj_consume_token(SEMI);
  }

  final public void OperandTail(Architecture a, Token n, Token k, Token b) throws ParseException {
                                                                OperandDecl d;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACKET:
      d = OperandSetDecl(n, b, k);
      break;
    case 71:
      d = OperandRangeDecl(n, b, k);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
      a.addOperand(d);
  }

  final public OperandDecl OperandSetDecl(Token n, Token k, Token b) throws ParseException {
                                                          List l = new LinkedList();
    jj_consume_token(LBRACKET);
    OperandSetElem(l);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      OperandSetElem(l);
    }
    jj_consume_token(RBRACKET);
      {if (true) return new OperandDecl.RegisterSet(n, b, k, l);}
    throw new Error("Missing return statement in function");
  }

  final public void OperandSetElem(List l) throws ParseException {
                                Token n, i;
    n = jj_consume_token(IDENTIFIER);
    jj_consume_token(EQUALS);
    i = jj_consume_token(INTEGER_LITERAL);
      l.add(new OperandDecl.RegisterEncoding(n, i));
  }

  final public OperandDecl OperandRangeDecl(Token n, Token k, Token b) throws ParseException {
                                                            Token l, h;
    jj_consume_token(71);
    l = jj_consume_token(INTEGER_LITERAL);
    jj_consume_token(COMMA);
    h = jj_consume_token(INTEGER_LITERAL);
    jj_consume_token(72);
      {if (true) return new OperandDecl.Immediate(n, b, k, l, h);}
    throw new Error("Missing return statement in function");
  }

  final public Token Kind() throws ParseException {
                 Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case REGISTER:
      t = jj_consume_token(REGISTER);
      break;
    case IMMEDIATE:
      t = jj_consume_token(IMMEDIATE);
      break;
    case ADDRESS:
      t = jj_consume_token(ADDRESS);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
      {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public List OperandSet() throws ParseException {
                      Token i; List l = new LinkedList();
    jj_consume_token(LBRACKET);
    i = jj_consume_token(IDENTIFIER);
                           l.add(i);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_3;
      }
      jj_consume_token(COMMA);
      i = jj_consume_token(IDENTIFIER);
                                                               l.add(i);
    }
    jj_consume_token(RBRACKET);
      {if (true) return l;}
    throw new Error("Missing return statement in function");
  }

  final public void RegisterDecl(Architecture a) throws ParseException {
    jj_consume_token(REGISTER);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(EQUALS);
    jj_consume_token(INTEGER_LITERAL);
    jj_consume_token(SEMI);
  }

  final public EncodingDecl Format(Token n) throws ParseException {
                                 EncodingDecl d;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      d = DerivedFormat(n);
      break;
    case LBRACKET:
      d = NewFormat(n);
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                               {if (true) return d;}
    throw new Error("Missing return statement in function");
  }

  final public EncodingDecl DerivedFormat(Token n) throws ParseException {
                                        Token p; EncodingDecl d; List l = new LinkedList();
    p = jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHERE:
      jj_consume_token(WHERE);
      l = SubstitutionList();
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
      {if (true) return new EncodingDecl.Derived(n, p, l);}
    throw new Error("Missing return statement in function");
  }

  final public EncodingDecl NewFormat(Token n) throws ParseException {
                                    List l;
    jj_consume_token(LBRACKET);
    l = ExprList();
    jj_consume_token(RBRACKET);
                             {if (true) return new EncodingDecl(n, l);}
    throw new Error("Missing return statement in function");
  }

  final public List SubstitutionList() throws ParseException {
                            List l = new LinkedList(); EncodingDecl.Substitution s;
    jj_consume_token(LBRACKET);
    s = Substitution();
                             l.add(s);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_4;
      }
      jj_consume_token(COMMA);
      s = Substitution();
                                                                   l.add(s);
    }
    jj_consume_token(RBRACKET);
                                                                                       {if (true) return l;}
    throw new Error("Missing return statement in function");
  }

  final public EncodingDecl.Substitution Substitution() throws ParseException {
                                             Token n; Expr e;
    n = jj_consume_token(IDENTIFIER);
    jj_consume_token(EQUALS);
    e = Expr();
                                      {if (true) return new EncodingDecl.Substitution(n, e);}
    throw new Error("Missing return statement in function");
  }

  final public List Formals() throws ParseException {
                   CodeRegion.Operand o; List l = new LinkedList();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      o = Formal();
                     l.add(o);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_5;
        }
        jj_consume_token(COMMA);
        o = Formal();
                                                     l.add(o);
      }
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
                                                                       {if (true) return l;}
    throw new Error("Missing return statement in function");
  }

  final public CodeRegion.Operand Formal() throws ParseException {
                                Token n, t;
    n = jj_consume_token(IDENTIFIER);
    jj_consume_token(73);
    t = jj_consume_token(IDENTIFIER);
                                            {if (true) return new CodeRegion.Operand(n, t);}
    throw new Error("Missing return statement in function");
  }

  final public void Subroutine(Architecture a) throws ParseException {
                                    boolean i = false; Token m, r; List f, l = new LinkedList();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SUBROUTINE:
    case INLINE:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INLINE:
        jj_consume_token(INLINE);
                 i = true;
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      jj_consume_token(SUBROUTINE);
      m = jj_consume_token(IDENTIFIER);
      jj_consume_token(LPAREN);
      f = Formals();
      jj_consume_token(RPAREN);
      jj_consume_token(73);
      r = jj_consume_token(IDENTIFIER);
      Block(l);
      jj_consume_token(SEMI);
          a.addSubroutine(new SubroutineDecl(i, m, f, r, l));
      break;
    case EXTERNAL:
      jj_consume_token(EXTERNAL);
      m = jj_consume_token(IDENTIFIER);
      jj_consume_token(LPAREN);
      f = Formals();
      jj_consume_token(RPAREN);
      jj_consume_token(73);
      r = jj_consume_token(IDENTIFIER);
      jj_consume_token(SEMI);
          a.addSubroutine(new SubroutineDecl(i, m, f, r, null));
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public Expr Expr() throws ParseException {
                Expr e;
    e = Cond_Or_Expr();
                         {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  final public List ExprList() throws ParseException {
                    List l = new LinkedList(); Expr e;
    e = Expr();
                  l.add(e);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_6;
      }
      jj_consume_token(COMMA);
      e = Expr();
                                                l.add(e);
    }
      {if (true) return l;}
    throw new Error("Missing return statement in function");
  }
